Version 10.4.167 - 11 August 2007, by Pascal "Pixel" Rigaux

- fix plural translations (#32505)
- 'ibm_acpi' driver was replaced by 'thinkpad_acpi (#31606)

Version 10.4.166 - 11 August 2007, by Pascal "Pixel" Rigaux

- do a normal die if drakbug is not present
- make Gtk2::MDV::CellRendererPixWithLabel RTL aware (#32450)

Version 10.4.163 - 9 August 2007, by Pascal "Pixel" Rigaux

- for XFdrake: use update-alternatives command instead doing things by hand
  (this uses --set, new feature of update-alternatives) (#32362)
- harddrake:
  o display the PCI domain too
  o handle nvidia-current.ko (Anssi Hannula)

Version 10.4.162 - 08 August 2007, by Thierry Vignaud

- fix fetching translations from "libDrakX-standalone" domain (#32402)
- diskdrake:
  o do not show partition types which have no associated filesystem
    for LVM LV (#32326)

Version 10.4.161 - 06 August 2007, by Thierry Vignaud

- drakbug:
  o exceptions with "\n" are considered normal ways to quit and thus
    do not fire up drakbug (eg: #32292)
- diskdrake:
  o restore progress bar when formatting ext3

Version 10.4.160 - 06 August 2007, by Thierry Vignaud

- diskdrake: 
  o add support for "nodiratime" mount option
  o fix range max value >2TB when creating a partition (useful for LVs >2TB)
- drakxservices: describe a few more services (#18612)

Version 10.4.159 - 06 August 2007, by Thierry Vignaud

- diskdrake:
  o allow setting "flush" option (for vfat)
- drakbug: do not report "wizcancel" exceptions (#32308)

Version 10.4.157 - 03 August 2007, by Thierry Vignaud

- report real version on --help
- drakbug:
  o report version of drakbug
- list iwl3945/iwl4965 modules (and unlist ipw3945)
- logdrake:
  o display "save" & "quit" button when run from the control center

Version 10.4.156 - 02 August 2007, by Thierry Vignaud

- localedrake:
  o adapt configuration of consolefonts for kbd
- logdrake:
  o fix crash if /var/log/explanations doesn't exist (#32234)
