@@ -135,7 +135,7 @@ sub create_steps_window {
 
     my @l = $category->(N("Installation"));
     foreach (grep { !eval $o->{steps}{$_}{hidden} } @{$o->{orderedSteps}}) {
-	if ($_ eq 'setRootPassword') {
+	if ($_ eq 'setRootPassword_addUser') {
 	    push @l, '', $category->(N("Configuration"));
 	}
 	my $img = gtknew('Image', file => 'steps_off.png');
