@@ -1,3 +1,7 @@
+- adduserdrake, finish-install:
+  o create only one user
+  o fix checking user info (#32517)
+
 Version 10.4.167 - 11 August 2007, by Pascal "Pixel" Rigaux
 
 - fix plural translations (#32505)
